<resources>
    <string name="app_name">Microsoft_Sign_In</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="website_hint">Website</string>
    <string name="microsoft_logo_description">Microsoft Logo</string>
    <string name="register_button_text">Register</string>
    <string name="already_have_an_account"><u>Already have an account?</u></string>
    <string name="facebook_logo_description">Facebook logo</string>
    <string name="google_plus_logo_description">Google Plus logo</string>
    <string name="use_other_methods">Sign in with</string>
    <string name="confirmed">Wonderful!</string>
    <string name="check_mark_description">Picture of a blue check mark.</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="confirmation_text">"%1$s, your super-awesome portfolio has been successfully submitted. The details below will be public within your community!"</string>
    <string name="name_string">Name: %1$s</string>
    <string name="email_string">Email: %1$s</string>
    <string name="website_string">Website: %1$s</string>
    <string name="create_account">Create account</string>
</resources>