<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:layout_gravity="center"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:clickable="true"
    android:gravity="center">

    <LinearLayout
        style="@style/parent"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/microsoftLogoHeight">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/microsoftLogoHeight"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/microsoft_logo_description"
                android:src="@drawable/ic_microsoft_logo" />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/viewsMargin"
            android:text="@string/create_account"
            android:textSize="30sp" />

        <LinearLayout
            style="@style/parent"
            android:layout_marginBottom="@dimen/viewsMargin"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                style="@style/parent"
                app:endIconMode="clear_text">

                <TextView
                    android:id="@+id/editTextNameError"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/viewsMargin"
                    android:textColor="@color/red" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    style="@style/modifiedEditText"
                    android:autofillHints="John, Mary, Olivia"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                app:endIconMode="clear_text">

                <TextView
                    android:id="@+id/editTextEmailError"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/viewsMargin"
                    android:textColor="@color/red" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:autofillHints="@gmail.com, outlook.com, yahoo.com, aol.com"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                app:passwordToggleEnabled="true">

                <TextView
                    android:id="@+id/editTextPasswordError"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/viewsMargin"
                    android:textColor="@color/red" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:autofillHints="name"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputWebsite"
                style="@style/parent"
                android:layout_marginBottom="@dimen/viewsMargin"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextWebsite"
                    style="@style/modifiedEditText"
                    android:autofillHints=".com"
                    android:hint="@string/website_hint"
                    android:inputType="textUri"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.apachat.loadingbutton.core.customViews.CircularProgressButton
            android:id="@+id/cirRegisterButton"
            style="@style/loginButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_button_text"
            app:initialCornerAngle="27dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

        <TextView
            style="@style/parent"
            android:layout_marginTop="10dp"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="17sp"
            android:textStyle="bold" />


        <LinearLayout
            style="@style/parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:weightSum="12">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@color/primaryTextColor" />

            <TextView
                style="@style/viewParent.smallHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/use_other_methods"
                android:textAlignment="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@color/primaryTextColor" />

        </LinearLayout>

        <LinearLayout
            style="@style/parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:alpha="0.7">

            <ImageView
                style="@style/otherMethodStyle"
                android:contentDescription="@string/facebook_logo_description"
                android:src="@drawable/ic_facebook" />

            <ImageView
                style="@style/otherMethodStyle"
                android:contentDescription="@string/google_plus_logo_description"
                android:src="@drawable/ic_google_plus" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>