<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmationPageActivity"
    android:focusableInTouchMode="true"
    android:layout_gravity="center"
    android:gravity="center">

    <ScrollView
        style="@style/parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">
        <LinearLayout
            style="@style/parent"
            android:orientation="vertical"
            android:padding="20dp">
            <RelativeLayout
                style="@style/parent"
                android:layout_marginBottom="@dimen/viewsMargin"
                android:gravity="center">

                <ImageView
                    android:id="@+id/check_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/check_mark_vector"
                    android:contentDescription="@string/check_mark_description" />

                <TextView
                    android:id="@+id/confirmed_title"
                    style="@style/viewParent.headerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-59dp"
                    android:layout_toEndOf="@id/check_image"
                    android:layout_alignParentBottom="true"
                    android:text="@string/confirmed" />

            </RelativeLayout>

            <TextView
                android:id="@+id/greeting_text"
                style="@style/parent.confirmationText.Large" />

            <TextView
                android:id="@+id/confirmation_text"
                style="@style/parent.confirmationText.Medium" />

            <com.apachat.loadingbutton.core.customViews.CircularProgressButton
                android:id="@+id/circLoginButton"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/viewsMargin"
                android:text="@string/sign_in_button_text"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>